# claude-self-reflect

./: .env.backup-20250817-124703  .env.example  .env.template  .gitignore  .gitleaks.toml  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.async-importer  Dockerfile.importer  Dockerfile.importer-isolated  Dockerfile.importer-isolated.alpine  Dockerfile.importer.alpine  Dockerfile.mcp-server  Dockerfile.mcp-server.alpine  Dockerfile.mcp-server.ubuntu  Dockerfile.safe-watcher  Dockerfile.streaming-importer  Dockerfile.streaming-importer.alpine  Dockerfile.watcher  Dockerfile.watcher.alpine  MCP_REFERENCE.md  MEMORY_DECAY_SUMMARY.md  README.md  RELEASE_NOTES.md  SECURITY.md  backup.sh  claude-self-reflect-2.4.15.tgz  docker-compose-isolated.yaml  docker-compose-optimized.yaml  docker-compose.test.yaml  docker-compose.yaml  health-check.sh  memory-log-20250805-173625.csv  memory-log-20250805-173948.csv  package-lock.json  package.json  restore.sh  test-cloud-complete.sh  (+10 more)
.claude/: settings.json
.github/: dependabot.yml
archived/: qdrant-mcp-server-qdrant (1).txt
claude-reflect/: pyproject.toml
claude-reflect/claude_reflect/: __main__.py  server.py  server_v2.py
claude-self-reflection/: install.sh  mcp-configs.json  mcp.json  package-lock.json  package.json  run-mcp.sh  test-embedding.js  test-mcp-minimal.js  test-mcp.js  test-server.js
config/: delta-update-state.json  docker-manifest.json  force-migration-state.json  imported-files-enhanced.json  imported-files-old.json  imported-files-test.json  imported-files.json.old  (+6 more)
mcp-server/: .gitignore  claude-reflect  pyproject.toml  requirements.txt  run-mcp-clean.sh  run-mcp-docker.sh  run-mcp.sh  test_mcp.py  test_server.py
mcp-server/.fastembed-cache/fast-all-MiniLM-L6-v2/: ._tokenizer.json
mcp-server/src/: __main__.py  embedding_manager.py  health.py  project_resolver.py  server.py  server_v2.py  status.py  utils.py
mcp-server/test-fresh-install/: package.json
mcp-server/test-fresh-install/test-fresh-install/: package-lock.json  package.json
(+394 files in other folders)
